# white-tailed-eagle

./: .gitignore  CMakeLists.txt  README.md
assets/img/: README.md
src/: main.cpp
src/Drawable/: drawable.cpp  drawable.hpp
src/Engine/Drawable/: drawable.cpp  drawable.hpp  drawablefactory.cpp  drawablefactory.hpp
src/Engine/Entity/: entity.cpp  entity.hpp  entitybuilder.hpp  entityfactory.cpp  entityfactory.hpp  transform.hpp
src/Engine/InputManager/: inputmanager.cpp  inputmanager.hpp
src/Engine/StateManager/: state.cpp  state.hpp  statemanager.cpp  statemanager.hpp
src/Engine/TextureManager/: texturemanager.cpp  texturemanager.hpp
src/Engine/UIManager/: uimanager.cpp  uimanager.hpp
src/Engine/UIManager/GuiManager/: fontmanager.cpp  fontmanager.hpp  guielement.cpp  guielement.hpp  guielementfactory.cpp  guielementfactory.hpp  guimanager.cpp  guimanager.hpp
src/Engine/UIManager/Renderer/: renderer.cpp  renderer.hpp
src/Entity/: entity.cpp  entity.hpp  entitybuilder.hpp  entityfactory.cpp  entityfactory.hpp  transform.hpp
src/InputManager/: inputmanager.cpp  inputmanager.hpp
src/StateManager/: state.cpp  state.hpp  statemanager.cpp  statemanager.hpp
src/Systems/GameObjects/: CapturePoint.cpp  CapturePoint.hpp  EntityType.hpp  Map.cpp  Map.hpp  MinHeap.cpp  MinHeap.hpp  Tile.cpp  Tile.hpp  TileType.hpp  TransformUtils.cpp  TransformUtils.hpp  Typedefs.hpp
src/Systems/GameObjects/Builders/: entitybuilder.hpp  entityfactory.cpp  entityfactory.hpp
src/Systems/GameObjects/Factories/: EntityFactory.cpp  EntityFactory.hpp
src/Systems/GameObjects/NoiseMap/: NoiseMap.cpp  NoiseMap.hpp
src/Systems/GameObjects/NoiseMap/SimplexNoise/: SimplexNoise.cpp  SimplexNoise.hpp
src/Systems/GameObjects/Path/: PathSegment.cpp  PathSegment.hpp  PathSegmentPool.cpp  PathSegmentPool.hpp
src/Systems/GameObjects/Tile/: Tile.cpp  Tile.hpp  TileBorder.cpp  TileBorder.hpp
src/Systems/GameObjects/Units/: Battalion.cpp  Battalion.hpp  BattalionProjectile.cpp  BattalionProjectile.hpp  HealthBar.cpp  HealthBar.hpp  ProjectilePool.cpp  ProjectilePool.hpp
src/Systems/Npc/: Npc.cpp  Npc.hpp
src/UIManager/: uimanager.cpp  uimanager.hpp
src/UIManager/Renderer/: renderer.cpp  renderer.hpp
